# tcebot_sim

./: README.md  package.xml  setup.cfg  setup.py
configs/: tcebot_bridge.yaml
launch/: simulation.launch.py  spawn_tcebot.launch.py
models/Arena/: model.config  model.sdf
models/Arena/meshes/: model.dae
models/Arena_Maze/: model.config  model.sdf
models/Arena_Maze/meshes/: model.dae
worlds/: arena.sdf  arena_maze.sdf  depot.sdf  warehouse.sdf
