<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tcebot_sim</name>
  <version>0.1.0</version>
  <description>ROS 2 package for simulating the tcebot robot in Gazebo, including predefined worlds, launch files, and configurations.</description>
  
  <maintainer email="dhanushshettigar90@gmail.com">Dhanush M</maintainer>
  <license>Apache-2.0</license>

  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
